--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   ],
   "main": "generators/index.js",
   "keywords": [
-    "gulp webpack es6"
+    "gulp", 
+    "webpack",
+    "es6"
   ],
   "dependencies": {
     "shelljs": "^0.6.0"
