--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "es6"
   ],
   "dependencies": {
-    "shelljs": "^0.6.0"
+    "chalk": "^1.1.1",
+    "shelljs": "^0.6.0",
+    "yeoman-generator": "^0.22.5",
+    "yosay": "^1.1.0"
   }
 }
