--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "chalk": "^1.1.1",
     "shelljs": "^0.6.0",
+    "snake-case": "latest",
     "yeoman-generator": "^0.22.5",
     "yosay": "^1.1.0"
   }
